# agentrology

./: .dockerignore  .env.example  .gitignore  .hfignore  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  client.py  env.sample  inference.py  models.py  openenv.yaml  prompts.py  pyproject.toml  utils.py
benchmarks/: agentrology-benchmark_OpenAI_GPT-5.3_6raI.json  agentrology-benchmark_arcee-ai_trinity-large-preview_free_4p0r.json  agentrology-benchmark_llama-3.1-8b-instant_fN9x.json  agentrology-benchmark_minimax_minimax-m2.5_qeDV.json  agentrology-benchmark_openai_gpt-oss-20b_free_5EVz.json  agentrology-benchmark_qwen_qwen3-32b_IQFj.json
brige-server/: main.py  monkey.js  run.sh
scripts/: clean_benchmarks.py  docker_build_and_run.sh  format.sh  generate_plots.py  inference.sh  run_dev.sh  test_all.sh
server/: Dockerfile  __init__.py  agentrology_environment.py  app.py  reward_computer.py  security.py  threat_manager.py
server/config/: logging.yaml
server/tasks/: __init__.py  task_base.py  tasks.py
server/ui/: dashboard.html  index.html
tests/: self_kill_protection.py  test_command_validator.py  test_repetition_logic.py
